# wayle

./: .gitignore  Cargo.toml  README.md  devenv.nix  flake.nix
.github/workflows/: ci.yml  release.yml
crates/wayle-config/src/: dropdown_sources.rs  lib.rs
crates/wayle-config/src/infrastructure/: schema.rs  service.rs  watcher.rs
crates/wayle-derive/src/: wayle_config.rs
crates/wayle-icons/src/: error.rs  lib.rs  manager.rs  migrate.rs  registry.rs  transform.rs
crates/wayle-idle-inhibit/: build.rs
crates/wayle-idle-inhibit/src/: ffi.rs
crates/wayle-ipc/src/: shell_ipc.rs
crates/wayle-iwd/: Cargo.toml
crates/wayle-iwd/src/: discovery.rs  error.rs  lib.rs  monitoring.rs  service.rs  types.rs
crates/wayle-iwd/src/network/: mod.rs
crates/wayle-iwd/src/proxy/: device.rs  diagnostic.rs  mod.rs  object_manager.rs  station.rs
crates/wayle-iwd/src/station/: mod.rs  monitoring.rs
crates/wayle-settings/src/: main.rs
crates/wayle-shell/: Cargo.toml  build.rs
crates/wayle-shell/src/: lib.rs  process.rs  systemd.rs
crates/wayle-styling/: Cargo.toml
crates/wayle-styling/src/: lib.rs  watcher.rs
crates/wayle-widgets/src/: lib.rs
docs/.vitepress/: config.ts
docs/config/: bar.md
docs/config/modules/: battery.md  clock.md  iwd.md  world-clock.md
docs/guide/: cli.md  custom-styles.md  editing-config.md
packaging/debian/: changelog.in  control.in  copyright  rules
packaging/rpm/: wayle.spec.in
resources/: wayle.portal  wayle.service
scripts/ci/: build-packages.sh
wayle/src/: main.rs
wayle/src/cli/: app.rs  dbus.rs  mod.rs
(+196 files in other folders)
